--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body {
 #nav-container {
     
     position: fixed;
+    display: none;
     
 }
 
@@ -39,4 +40,29 @@ body {
     border-radius: 10px;
     box-shadow: 0px 0px 30px #aaa;
     
+}
+#nav-container .nav-box ul {
+    
+    list-style-type: none;
+    padding: 0;
+    
+}
+
+#nav-container .nav-box ul li {
+    
+    display: block;
+    padding: 5px;
+    
+}
+
+#nav-container .nav-box ul li a, #nav-container .nav-box ul li a:visited {
+    
+    text-decoration: none;
+    color: #9f9f9f;
+    
+}
+#nav-container .nav-box ul li a:hover {
+    
+    
+    color: #650000;
 }
