--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
     background-color: #fefefe;
     border-radius: 20px;
     padding: 10px;
+    box-shadow: 0 px 0px 30px #aaa;
     
 }
 
